Fix formatting in Table styles and enable horizontal overflow in Presentation component

--- a/packages/pxweb2/src/app/components/Presentation/Presentation.module.scss
+++ b/packages/pxweb2/src/app/components/Presentation/Presentation.module.scss
@@ -15,8 +15,11 @@
   @container contentCont (width > 1px) {
     .tableContainer {
       width: 100cqw;
-      //overflow-x: auto  ;
-      position: relative;    /* safe stacking context */
+
+      //Here
+      overflow-x: auto;
+
+      position: relative;
     }
   }
 
